GET car and car by ID works with fetching customer
